--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	  </ul>
 	</section>
 
-	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	
 	<script type="text/javascript" src="js/timeline.js"></script>
 </body>
